--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -3,6 +3,7 @@
 @white: #FFFFFF;
 @blue-main: #81B3D2;
 @black: #000000;
+@black-opacity: rgba(0, 0, 0, 0.5);
 @grey: #EEEEEE;
 @form-grey: #F2F2F2;
 @dark-grey: #333333;
@@ -11,6 +12,10 @@
 @grey-wrap: #E7E5E5;
 @grey-contacts: #E6E6E6;
 @grey-catalog: #EAEAEA;
+@brown-menu: #766357;
+@brown-menu-dark: #604E43;
+@grey-disabled: #E5E5E5;
+@grey-hover: rgba(255, 255, 255, 0.5);
 
 // viewports
 
