--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -1,10 +1,13 @@
 .video{
-  margin: 150px auto 0;
+  margin: 150px auto 200px;
   display: flex;
   text-align: center;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+
+  width: 320px;
+  height: 521px;
 
     @media (min-width: @tablet-width){
       width: 648px;
@@ -38,13 +41,16 @@
   text-transform: uppercase;
   color: @dark-grey;
   margin-bottom: 33px;
+  text-align: center;
+  margin: 0 auto;
     @media (min-width: @tablet-width){
       margin-bottom: 60px;
+      max-width: 445px;
     }
 }
 
 .video__volume{
-  width: 280px;
+  width: 100%;
   height: 45px;
   background-color: @black;
   opacity: 0.6;
@@ -52,10 +58,14 @@
   position: absolute;
   bottom: -43px;
   left: 0;
+
+  @media (min-width: @tablet-width){
+    display: none;
+  }
 }
 
 .video__control{
-  width: 280px;
+  width: 100%;
   height: 66px;
   background-color: @form-grey;
 }
