Адаптивная графика для главной страницы

--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -16,6 +16,7 @@
 @brown-menu-dark: #604E43;
 @grey-disabled: #E5E5E5;
 @grey-hover: rgba(255, 255, 255, 0.5);
+@grey-light: #D6D6D6;
 
 // viewports
 
