--- a/source/less/blocks/about.less
+++ b/source/less/blocks/about.less
@@ -41,22 +41,22 @@
       // margin: 55px auto 41px;
     }
 
-  @media (max-width: @mobile-width-only){
+  // @media (max-width: @mobile-width-only){
 
-    &:before{
-      content: "";
-      width: 100%;
-      height: 37px;
-      position: absolute;
-      bottom: -37px;
-      left: 0;
-      z-index: 3;
-      background-image: url(../img/about-triangle.svg);
-      background-repeat: no-repeat;
-      background-position: center bottom;
-      background-size: cover;
-    }
-  }
+  //   &:before{
+  //     content: "";
+  //     width: 100%;
+  //     height: 37px;
+  //     position: absolute;
+  //     bottom: -37px;
+  //     left: 0;
+  //     z-index: 3;
+  //     background-image: url(../img/about-triangle.svg);
+  //     background-repeat: no-repeat;
+  //     background-position: center bottom;
+  //     background-size: cover;
+  //   }
+  // }
 }
 
 .about-form{
