--- a/source/less/blocks/reasons.less
+++ b/source/less/blocks/reasons.less
@@ -31,7 +31,7 @@
 
 .reasons-item__wrapper{
   text-align: center;
-
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -46,11 +46,47 @@
     }
 }
 
+.reasons_bop .reasons-item__wrapper:not(:last-child){
+  @media (max-width: @mobile-width-only){
+    &:before{
+      content: "";
+      position: absolute;
+      bottom: 0;
+      width: 280px;
+      height: 2px;
+      background-color: @grey-light;
+      margin: 0 auto;
+    }
+  }
+}
+
 
 .reasons-img .reasons-item__wrapper {
   background-color: @blue-main;
   color: @white;
 }
+
+.reasons-img .reasons-item__wrapper:first-child {
+  background-color: @blue-main;
+  color: @white;
+  @media (max-width: @mobile-width-only){
+
+    &:before{
+      content: "";
+      width: 100%;
+      height: 37px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 3;
+      background-image: url(../img/about-triangle.svg);
+      background-repeat: no-repeat;
+      background-position: center bottom;
+      background-size: cover;
+    }
+  }
+}
+
 
 .reasons-item__img{
   width: 100%;
