--- a/source/less/blocks/fullname.less
+++ b/source/less/blocks/fullname.less
@@ -36,6 +36,7 @@
   background-color: @form-grey;
   border: none;
   outline: none;
+  margin-left: 15px;
 
     &:hover,
     &:focus {
@@ -58,4 +59,7 @@
   font-size: 18px;
   line-height: 26px;
   color: @black;
+
+  padding-top: 18px;
+  padding-left: 20px;
 }
