--- a/source/less/blocks/impression.less
+++ b/source/less/blocks/impression.less
@@ -1,4 +1,5 @@
 .impression{
+
   width: 100%;
   display: flex;
   justify-content: center;
@@ -10,11 +11,53 @@
   }
 
 .impression__item{
+  position: relative;
   margin-bottom: 43px;
     @media (min-width: @tablet-width){
       margin-bottom: 52px;
     }
+}
 
+
+.impression__item input + label{
+  &:before{
+    content: "";
+    width: 48px;
+    height: 48px;
+    position: absolute;
+    top: -15px;
+    left: 0;
+    background-color: @form-grey;
+    border: 5px solid @form-grey;
+
+    &:hover,
+    &:focus {
+      background-color: @grey-disabled;
+      border: 5px solid @grey-disabled;
+    }
+
+    &:active {
+      opacity: .3;
+      border: 5px solid @grey-down;
+    }
+  }
+}
+.impresions__item input:checked + label{
+  &:before{
+    content: "";
+    width: 48px;
+    height: 48px;
+    position: absolute;
+    top: -15px;
+    left: 0;
+    background-color: @form-grey;
+    border: 5px solid @form-grey;
+    background-image: url(../img/tick.svg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 23px 16px;
+
+  }
 }
 .impression__item label{
   font-family: "PT Sans", "Arial", sans-serif;
@@ -23,10 +66,13 @@
   font-size: 18px;
   line-height: 26px;
   text-transform: none;
+
+  padding-left: 60px;
 }
 
 .impression fieldset{
   border: none;
+  padding-top: 30px;
 }
 
 
